# legal-doc-ua

./: README.md  pyproject.toml
src/: document_header_batches.py  document_header_orchestrator.py  document_header_pipeline.py  document_pipeline_orchestrator.py
src/document_split/: __init__.py  cloud.py  config.py  document_parser.ipynb  openai_pipeline.py  openai_runtime.py  pipeline.py  processing.py  runtime.py  self_checks.py
src/graph_nn_learning/: CS224W_Colab_1.ipynb
src/legal_doc_parser/: 1.0_paring_contents_structure.ipynb  1.1_document_extraction.ipynb  1.2_courts_stat.ipynb  1.3_parsing_cumulative_intermediate_status.ipynb  document_header_batches.py  document_header_orchestrator.py  document_header_pipeline.py  document_pipeline.py  document_pipeline_batches.py  document_pipeline_bigquery.py  document_pipeline_orchestrator.py  download_gcs_file.py  prepare_rtf_for_openai.py  pretrain_bge.py  pretraining_data.py
src/model_parsing_testing/: ukr_lang_decomposition.ipynb
