[project]
name = "legal-doc-parser"
version = "0.1.0"
description = ""
authors = [
    {name = "Illia Savenko",email = "i.savenko@sxope.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "numpy (>=2.4.2,<3.0.0)",
    "jupyterlab (>=4.5.3,<5.0.0)",
    "openai (>=2.18.0,<3.0.0)",
    "google-cloud-storage (>=3.9.0,<4.0.0)",
    "google-cloud-bigquery[pandas] (>=3.40.1,<4.0.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "transformers (>=5.8.1,<6.0.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "torch (==2.12.0)",
    "torchvision (==0.27.0)",
    "accelerate (>=1.13.0,<2.0.0)",
    "striprtf (>=0.0.32,<0.0.33)",
    "ftfy (>=6.3.1,<7.0.0)",
    "pyarrow (>=24.0.0,<25.0.0)",
    "tqdm (>=4.68.3,<5.0.0)",
    "langchain-text-splitters (>=1.1.2,<2.0.0)",
    "spacy (>=3.8.14,<4.0.0)",
    "stanza (>=1.13.0,<2.0.0)",
    "langdetect (>=1.0.9,<2.0.0)"
]

[tool.poetry]
packages = [{include = "legal_doc_parser", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
